New Documentation and new sdr software

--- a/doc/Literaturverzeichnis.bib
+++ b/doc/Literaturverzeichnis.bib
@@ -1,58 +1,125 @@
+#Skript von Peik
+@misc{VorlesungsskriptPeik,
+    title = {Microwave Circuits and Systems},
+    author = {Professor Sören Peik},
+    year = {2021},
+    note = {Vorlsungsskript für Mikrowellentechnik, Hochschule Bremen}
+}
+@misc{VorlesungsFoliePeik,
+    title = {Microwave Circuits and Systems},
+    author = {Professor Sören Peik},
+    year = {2021},
+    note = {Vorlsungsskript für Mikrowellentechnik, Hochschule Bremen}
+}
+
 #Für Es'Hail-2
-@misc{EsHail2,
+@online{EsHail2,
 	author = {Gülzow, Peter},
 	title = {Es’hail-2 / AMSAT Phase 4-A / Qatar-OSCAR 100},
 	url = {https://amsat-dl.org/en/eshail-2-amsat-phase-4-a/},
-    urldate = {09.09.2025}}
-@misc{linearTransponder, 
+    urldate = {2025-09-09},}
+@online{linearTransponder, 
     title={Creating a linear transponder with an RTL-SDR, hackrf and Raspberry Pi}, 
     url={https://www.rtl-sdr.com/creating-a-linear-transponder-with-an-rtl-sdr-hackrf-and-raspberry-pi/}, 
     journal={rtl-sdr.com}, 
     author={admin},
     year={2018}, 
-    month={May}} 
-@misc{BarkerFM, 
+    month={May}, 
+    urldate = {2025-12-09}
+}
+@online{BarkerFM, 
     title={Getting started 5.PDF},
     url={https://www.amsat.org/wordpress/xtra/Getting%20Started%205.pdf}, 
     journal={Getting Started on the Amateur Radio Satellites (Part V)}, 
     publisher={AMSAT}, 
     author={Barker, Keith},
-    urldate = {12.09.2025}} 
-@misc{CoverageEsHail2Amateur,
+    urldate = {2025-12-09},
+} 
+@online{CoverageEsHail2Amateur,
     url =  {https://www.n2yo.com/?s=43700},
-    urldate = {12.09.2025},
-    note = {Abdeckungsbereich von Es'Hail-2/QO-100}}
-@misc{EsHail2NarrowbandBandplan,
+    organization = {N2YO},
+    urldate = {2025-12-09},
+    note = {Abdeckungsbereich von Es'Hail-2/QO-100}
+}
+@online{EsHail2NarrowbandBandplan,
     url =  {https://amsat-dl.org/wp-content/uploads/2020/02/AMSAT-QO-100-NB-Transponder-Bandplan-Graph-1140x641.png},
-    publisher = {AMSAT},
-    urldate = {15.09.2025},
-    note = {Bandplan des Schmallbandtransponder}}
-@misc{FrequenzplanBundesnetzagentur,
+    organization = {AMSAT},
+    urldate = {2025-15-09}, 
+    note = {Bandplan des Schmallbandtransponder}
+}
+@online{FrequenzplanBundesnetzagentur,
+    title = {FREQUENZPLAN},
     url =  {https://data.bundesnetzagentur.de/Bundesnetzagentur/SharedDocs/Downloads/DE/Sachgebiete/Telekommunikation/Unternehmen_Institutionen/Frequenzen/20210114_frequenzplan.pdf},
-    publisher = {Bundesnetzagentur},
-    page = {406},
-    urldate = {15.09.2025},
-    note = {Allgemeiner Frequenzplan der Bundesnetzagentur}}
+    organization = {Bundesnetzagentur},
+    urldate = {2026-01-05},
+    note = {Allgemeiner Frequenzplan der Bundesnetzagentur (Stand 2022)}
+}
+@online{KoordinatenBodensation,
+    title = {Koordinaten der Bodenstation am IAT},
+    url = {https://www.openstreetmap.org/node/2635796638#map=18/53.055242/8.783454},
+    organization = {OpenStreetMap},
+    urldate = {2026-01-04}
+}
+@online{astronomischeKoordinatensysteme,
+    title = {Astronomische Koordinatensysteme},
+    author = {Bastian Henne,Sebastian Kiehlmann},
+    url = {https://lp.uni-goettingen.de/get/text/6855},
+    urldate = {2026-01-10}
+}
+@online{skew,
+    title = {DER SKEW-WINKEL (KURZINFO)},
+    organization = {ten Haaft GmbH},
+    url = {https://download.ten-haaft.com/Skew_Winkel.pdf},
+    year = {2023},
+    month = {April},
+    urldate = {2026-01-10}
+}
+
 
 #Literatur für Satelliten
+@online{Bodensationen,
+	author = {Kurt G. Baldenhofer},
+	title = {Es’hail-2 / AMSAT Phase 4-A / Qatar-OSCAR 100},
+	url = {https://www.fe-lexikon.info/lexikon/bodenstation},
+    urldate = {2026-01-09},}
+@ARTICLE{Frequenzbänder,
+  author={},
+  journal={IEEE Std 521-2002 (Revision of IEEE Std 521-1984)}, 
+  title={IEEE Standard Letter Designations for Radar-Frequency Bands}, 
+  year={2003},
+  volume={},
+  number={},
+  pages={1-10},
+  keywords={frequency;letter band;radar},
+  doi={10.1109/IEEESTD.2003.94224}}
+
+
+
+
+
 @book{Satellitenkommunikation, 
     place={Berlin, Heidelberg}, 
     title={Satellitenkommunikation}, 
     publisher={Springer-Verlag}, 
     author={Dodel, Hans and Eberle, Sabrina}, 
     year={2007}, 
-    ISBN={9783540295761}} 
+    ISBN={9783540295761}
+} 
 @book{Satellite_Technology, 
     place={Chichester, West Sussex}, 
     title={Satellite Technology: Principles and applications}, 
-    publisher={Wiley}, author={Maini, Anil Kumar and Agrawal, Varsha}, 
+    publisher={Wiley}, 
+    author={Maini, Anil Kumar and Agrawal, Varsha}, 
     year={2014}, 
-    ISBN = {9781118636473}}
-@misc{ASTRA, 
+    ISBN = {9781118636473}
+}
+@online{ASTRA, 
     url={https://astra.de/astra-welt/die-welt-der-satelliten/goldgraeberstimmung-im-all}, 
-    urldate = {},
+    urldate = {2025-10-01},
     journal={ASTRA}, 
-    publisher={SES S.A. ASTRA}} 
+    organization={SES S.A. ASTRA}} 
+
+
 @misc{NASA_Explorer1, 
     title={Explorer 1 overview}, 
     url={https://www.nasa.gov/history/explorer-1-overview/}, 
@@ -60,41 +127,54 @@
     publisher={NASA}, 
     author={Loff, Sarah A.}, 
     year={2023}, 
-    month={Aug}}
-@misc{DWD, 
+    month={Aug},
+    urldate = {2025-10-05}}
+
+@online{DWD, 
     url={https://www.dwd.de/DE/forschung/atmosphaerenbeob/wettersatelliten/wettersatelliten_node.html}, 
-    journal={Wetter und Klima - Deutscher Wetterdienst - Wettersatelliten}, 
-    publisher={Deutscher Wetterdienst (DWD)}} 
+    title={Wetter und Klima - Deutscher Wetterdienst - Wettersatelliten}, 
+    organization={Deutscher Wetterdienst (DWD)},
+    urldate = {2025-10-06}}
+
+
 @misc{Bild_Sputnik, 
     title={Sputnik 1 Vor Dem start}, 
     url={https://www.dlr.de/de/next/multimedia/eine-kurze-geschichte-der-raumfahrt/sputnik-1-vor-dem-start}, 
     journal={Deutsches Zentrum für Luft- und Raumfahrt}, 
     publisher={Deutsches Zentrum für Luft- und Raumfahrt}, 
-    author={Siddiqi, Asif A.}} 
+    author={Siddiqi, Asif A.},
+    urldate = {2025-10-05}}
 @misc{Sputnik_1, 
     title={Eine Zeitenwende der Spionagegeschichte: Vor 60 Jahren Startete sputnik 1 als Erster Satellit ins all}, 
     url={https://www.deutsches-spionagemuseum.de/2017/10/04/eine-zeitenwende-der-spionagegeschichte-vor-60-jahren-startete-sputnik-1}, 
     journal={Deutsches Spionagemuseum}, 
     author={Schimikowski, Florian}, 
     year={2021}, 
-    month={Mar}} 
+    month={Mar}, 
+    urldate = {2025-10-05}}
 @misc{AMSAT-DL, 
+    title = {Wer sind wir?},
     url={https://amsat-dl.org/wer-sind-wir/}, 
     journal={AMSAT}, 
-    publisher={AMSAT-DL},
-    note = {AMSAT-DL}}
+    organization={AMSAT-DL},
+    urldate = {2025-09-18}}
+
 @misc{AMSAT_SATLIST, 
-    note = {AMSAT Satellitenlisten Stand:18.09.2025},
+    title = {Übersicht aller Amateurfunksatelliten},
     url={https://amsat-dl.org/satelliten-uebersicht/}, 
-    journal={AMSAT}, 
-    publisher={AMSAT}, 
-    year={2025}, 
-    month={Sep}} 
-@misc{N2YO_SATLIST, 
+    note = {Stand 18. September 2025}, 
+    organization={AMSAT}, 
+    urldate = {2025-09-18}} 
+
+@misc{N2YO_SATLIST,
+    title = {OBJECTS CURRENTLY IN ORBIT},
     url={https://www.n2yo.com/satellites/}, 
     journal={N2YO}, 
-    publisher={N2YO}, 
-    note = {Kategorien mehrere Satellitenkonstellationen}} 
+    organization={N2YO}, 
+    note = {Kategorien mehrere Satellitenkonstellationen},
+    urldate = {2025-09-23}}}
+
+
 @misc{ESA-LEO, 
     title={Low Earth orbit}, 
     url={https://www.esa.int/ESA_Multimedia/Images/2020/03/Low_Earth_orbit}, 
@@ -102,50 +182,61 @@
     publisher={ESA}, 
     author={Boldt-Christmas, ESA–L}, 
     year={2020}, 
-    month={Mar}} 
+    month={Mar}}
+
 @misc{ESA-Orbits, 
     url={https://www.esa.int/Enabling_Support/Space_Transportation/Types_of_orbits}, journal={ESA}, 
     publisher={ESA}, 
     year={2020}, 
     month={Mar}} 
+
 @misc{Starwalk, 
     title={Himmlische Koordinaten: Ultimativer Leitfaden}, 
     url={https://starwalk.space/de/news/celestial-coordinates}, 
-    journal={Star Walk}, publisher={Vito Technology, Inc.},     
+    journal={Star Walk}, 
+    publisher={Vito Technology, Inc.},     
     author={Vito Technology, Inc.}, 
     year={2023}, 
-    month={Jul}} 
+    month={Jul},
+    urldate = {2025-10-28}}
+
 @misc{TU-Dresden, 
     url={https://tu-dresden.de/bu/umwelt/geo/ipg/astro/ressourcen/dateien/skripte/Vorlesung-Referenzsysteme2015.pdf?lang=en}, 
     journal={Astronomische Koordinatensysteme}, 
     publisher={TU Dresden}, 
-    author={Klioner, Sergei A.}} 
+    author={Klioner, Sergei A.},
+    urldate = {2025-10-28}}}
+    
 @misc{Sternwarte, 
-    url={http://www.sternwarte-eberfing.de/Fuehrung/Objektbeschreibung/Koordinatensysteme.html}, journal={Koordinatensysteme}, 
-    publisher={Sternwarte Eberfing}} 
+    url={http://www.sternwarte-eberfing.de/Fuehrung/Objektbeschreibung/Koordinatensysteme.html}, title={Koordinatensysteme}, 
+    organization={Sternwarte Eberfing},
+    urldate = {2025-10-28}}
 
 
 
 
 #Literatur für Mischer
 @book{HEUERMANN_2018, 
-    title={Hochfrequenztechnik: Komponenten Fr High-Speedund Hochfrequenzschaltungen}, publisher={Springer Fachmedien Wiesbaden : Imprint : Springer Vieweg}, 
+    title={Hochfrequenztechnik: Komponenten Fr High-Speedund Hochfrequenzschaltungen}, publisher={Springer Fachmedien Wiesbaden: Imprint: Springer Vieweg}, 
     author={HEUERMANN, HOLGER}, 
     year={2018},
-    ISBN = {alt: 978-3-658-23197-2 neu:978-3-658-37825-7 }} 
+    ISBN = {978-3-658-23197-2}
+} 
 @book{Thiede_2013, 
     place={Wiesbaden}, 
-    title={Integrierte Hochfrequenzschaltkreise: Grundlagen des Computergestützten Entwurfs}, publisher={Springer Fachmedien Wiesbaden : Imprint : Springer Vieweg}, 
+    title={Integrierte Hochfrequenzschaltkreise: Grundlagen des Computergestützten Entwurfs}, publisher={Springer Fachmedien Wiesbaden: Imprint: Springer Vieweg}, 
     author={Thiede, Andreas}, 
     year={2013},
-    ISBN = {978-3-8348-1246-9}}
+    ISBN = {978-3-8348-1246-9}
+}
 @book{Microwave_Wiley, 
     place={Hoboken (N.J.)}, 
-    title={Microwave engineering}, 
+    title={Microwave engineering, 4th Edition}, 
     publisher={John Wiley & Sons}, 
     author={Pozar, David M.}, 
-    year={2012},
-    ISBN = {978-0-470-63155-3}} 
+    year={2011},
+    ISBN = {978-0-470-63155-3}
+} 
 
 
 
@@ -156,8 +247,9 @@
     publisher={Wiley}, 
     author={Balanis, Constantine A.}, 
     year={2005},
-    ISBN = {0-471-66782-X}}
-@techreport{IEEE145-1993,
+    ISBN = {0-471-66782-X}
+}
+@article{IEEE145-1993,
   type      = {Standard},
   title     = {IEEE Standard Definitions of Terms for Antennas},
   institution = {Institute of Electrical and Electronics Engineers (IEEE)},
@@ -166,7 +258,6 @@
   address   = {New York, NY, USA},
   url       = {https://www.ece.mcmaster.ca/faculty/nikolova/antenna_dload/IEEEStandard_AntennaTerms.pdf},
   urldate   = {2025-10-13},
-  note      = {Zugriff am 13.10.2025}
 }
 @online{Radartutorial-Antennendiagramm,
   title     = {Antennendiagramm},
@@ -174,7 +265,6 @@
   year      = {2025},
   url       = {https://www.radartutorial.eu/06.antennas/Antennendiagramm.de.html},
   urldate   = {2025-10-15},
-  note      = {Zugriff am 15.10.2025}
 }
 @online{Radartutorial-Nahundfernfeld,
   title     = {Nahfled/Fernfeld},
@@ -182,7 +272,6 @@
   year      = {2025},
   url       = {https://www.radartutorial.eu/06.antennas/an60.de.html},
   urldate   = {2025-10-15},
-  note      = {Zugriff am 15.10.2025}
 }
 @online{Radartutorial-ERP,
   title     = {Äquivalente Strahlungsleistung (EIRP)},
@@ -190,11 +279,10 @@
   year      = {2025},
   url       = {https://www.radartutorial.eu/08.transmitters/tx57.de.html},
   urldate   = {2025-10-21},
-  note      = {Zugriff am 21.10.2025}
 }
 @online{Wellentypen,
   title     = {Wellentypen},
-  author    = {Studyflix},
+  organization = {Studyflix},
   year      = {2025},
   url       = {https://studyflix.de/ingenieurwissenschaften/transversalwelle-6799},
   urldate   = {2025-11-30},
@@ -213,75 +301,421 @@
   url       = {https://commons.wikimedia.org/w/index.php?curid=4849061},
   urldate   = {2025-12-01}
 }
+@techreport{Blake,
+    author = {L. V. Blake} ,
+    title = {A Guide to Basic Pulse-Radar Maximum-Range Calculation} ,
+    institution = {Naval Research Laboratory - Radar Geophysics Branch},
+    year = {1969},
+    city = {Washington DC., USA}
+}
+@manual{KathreinCAS90HD,
+    title = {CAS 90 HD ohne Logo},
+    year = {2023},
+    note = {SAT-Antenne ∅ 90 cm | ohne Logo},
+    organization = {Kathrein Digital Systems GmbH},
+    url = {https://www.kathrein-ds.com/produkte/tv-empfang-verteilung/sat-empfang/sat-antennen/bis-100-cm/cas-90-hd-ohne-logo},
+    urldate = {2025-12-20}
+}
+@online{Hornantenne,
+  author    = {Jacopo Cassinis (IU1QPT)},
+  title     = {An X band primer},
+  url       = {https://www.a-centauri.com/articoli/an-x-band-primer},
+  urldate   = {2025-12-20}
+}
+
 
 
 
 #Literatur der Bauteile
-@online{bamatech-feed,
+@manual{amatech-feed,
   title   = {3-Band-Feed 2.4 / 5.6 / 10 GHz, Offset Dish},
-  author  = {Bamatech},
+  organization  = {Bamatech},
   year    = {2025},
   url     = {https://www.bamatech.net/product_info.php?info=p987_3-band-feed-2-4---5-6---10-ghz---offset-dish.html&no_boost=1},
-  urldate = {2025-10-12},
-  note    = {Produktseite, Zugriff am 12.10.2025}
+  urldate = {2025-10-12}, 
 }
-@online{bamatech-feedholder,
+
+@manual{bamatech-feedholder,
   title   = {Feedholder 40/23 mm},
-  author  = {Bamatech},
+    organization  = {Bamatech},
   year    = {2025},
   url     = {https://www.bamatech.net/product_info.php?info=p990_feedholder-40-23-mm.html&no_boost=1},
   urldate = {2025-10-12},
-  note    = {Produktseite, Zugriff am 12.10.2025}
 }
-@online{kuhne-bias-tee,
+@manual{kuhne-bias-tee,
   title   = {KU BT 10 REF Bias Tee},
-  author  = {Kuhne Electronic},
+  organization  = {Kuhne Electronic},
   year    = {2025},
   url     = {https://shop.kuhne-electronic.com/kuhne/en/shop/eshail/KU+BT+10+REF++Bias+Tee/?card=1885},
   urldate = {2025-10-12},
-  note    = {Produktseite, Zugriff am 12.10.2025}
 }
-@online{kuhne-downconverter,
+@manual{kuhne-downconverter,
   title   = {MKU LNC 10 QO100 Downconverter},
-  author  = {Kuhne Electronic},
+  organization  = {Kuhne Electronic},
   year    = {2025},
   url     = {https://shop.kuhne-electronic.com/kuhne/en/shop/eshail/MKU+LNC+10+QO100/?card=1875},
   urldate = {2025-10-12},
-  note    = {Produktseite, Zugriff am 12.10.2025}
 }
+@manual{USRP-X310,
+    title = {USRP™ X300 and X310 X Series},
+    organization = {Ettus Research™, A National Instruments Company},
+    url     = {https://www.ettus.com/all-products/x310-kit/},
+    urldate = {2025-12-20},
+}
+@online{USRP-X310-Doku,
+    title = {X300/X310},
+    organization = {Ettus Research™, A National Instruments Company},
+    url     = {https://kb.ettus.com/X300/X310},
+    urldate = {2026-01-07},
+}
+@online{USRP-X310-TwinRX-Doku,
+    title = {TwinRx},
+    organization = {Ettus Research™, A National Instruments Company},
+    url     = {https://kb.ettus.com/TwinRx},
+    urldate = {2026-01-07},
+}
+@online{USRP-X310-UBX-Doku,
+    title = {UBX},
+    organization = {Ettus Research™, A National Instruments Company},
+    url     = {https://kb.ettus.com/UBX},
+    urldate = {2026-01-07},
+}
+
+@online{DynamicRange,
+  title     = {What is the SDR Dynamic Range?},
+  author    = {Mile Mokotov},
+  url       = {https://www.leifiphysik.de/elektrizitaetslehre/ladungen-elektrisches-feld/grundwissen/elementarladung},
+  urldate   = {2025-20-12},
+}
+@manual{S_04212_B,
+    title = {S\_04212\_B: Low-loss, 50 Ohm, 18 GHz, 85°C, ø5.3 mm, PUR jacket},
+    organization = {HUBER+SUHNER},
+    url     = {https://www.koax24.de/storage/datasheet/de/050175_Datenblatt_S_04212_B_dataSheet.pdf},
+    date = {2023-12-08},
+    urldate = {2025-11-10},
+}
+@manual{S_04212_B_koax24,
+    title = {S\_04212\_B: Low-loss, 50 Ohm, 18 GHz, 85°C, ø5.3 mm, PUR jacket},
+    organization = {arnotec GmbH},
+    url     = {https://www.koax24.de/produktinfos/koaxialkabel/koaxialkabel-50-ohm/49-61-mm-gr4/s-04212-b-pur.html},
+    date = {2023-12-08},
+    urldate = {2025-11-10},
+}
+@manual{LL142_koax24,
+    title = {LL142 STR Super LowLoss Koaxialkabel / 50 Ohm},
+    organization = {arnotec GmbH},
+    url     = {https://www.koax24.de/produktinfos/koaxialkabel/koaxialkabel-50-ohm/49-61-mm-gr4/ll142.html},
+    urldate = {2025-11-10},
+}
+@manual{PUR_koax24,
+    title = {PUR Mantel},
+    organization = {arnotec GmbH},
+    url     = {https://www.koax24.de/produktinfos/koaxialkabel/eigenschaften/pur-mantel.html},
+    urldate = {2025-11-10},
+}
+@manual{LMR600,
+    title = {LMR®-600 Flexible Low Loss Communications Coax},
+    organization = {Times Microwave},
+    url     = {https://www.koax24.de/storage/datasheet/de/050271_Datenblatt_LMR-600.pdf},
+    urldate = {2025-11-10},
+}
+@manual{LMR400,
+    title = {LMR®-400-FR},
+    organization = {Times Microwave},
+    url     = {https://www.koax24.de/storage/datasheet/de/050309_Datenblatt_LMR-400-FR.pdf},
+    urldate = {2025-11-10},
+}
+@manual{LMR400_koax24,
+    title = {LMR400 FR KOAXIALKABEL / 50Ω - LMR 400 FR},
+    organization = {arnotec GmbH},
+    url     = {https://www.koax24.de/storage/datasheet/de/050309_Datenblatt_LMR-400-FR.pdf},
+    urldate = {2025-11-10},
+}
+@manual{FRPE_koax24,
+    title = {PE Mantel},
+    organization = {arnotec GmbH},
+    url     = {https://www.koax24.de/produktinfos/koaxialkabel/eigenschaften/pe-mantel.html},
+    urldate = {2025-11-10},
+}
+@manual{Hyperflex5,
+    title = {M&P Hyperflex 5},
+    organization = {Messi&Paoloni},
+    url     = {https://www.koax24.de/storage/datasheet/de/050222_Datenblatt_MeP-HYF5-HYPERFLEX.pdf},
+    urldate = {2025-11-10},
+}
+@manual{Hyperflex5_koax24,
+    title = {HyperFlex 5 / 50Ω LOW-LOSS KOAXIALKABEL},
+    organization = {arnotec GmbH},
+    url     = {https://www.koax24.de/produktinfos/koaxialkabel/koaxialkabel-50-ohm/49-61-mm-gr4/hyperflex-5.html},
+    urldate = {2025-11-10},
+}
+@manual{RFSP4T_Switch,
+    title = {RF SP4T Switch Matrix},
+    organization = {Mini-Circuits},
+    url     = {https://www.minicircuits.com/pdfs/RC-2SP4T-A18.pdf},
+    urldate = {2026-01-05},
+}
+
 
 #Für Rauschen
 @online{leifiphysik-elementarladung,
   title     = {Elementarladung},
-  author    = {{LEIFIphysik}},
+  organization    = {LEIFIphysik},
   year      = {2025},
   url       = {https://www.leifiphysik.de/elektrizitaetslehre/ladungen-elektrisches-feld/grundwissen/elementarladung},
   urldate   = {2025-11-10},
-  note      = {Zugriff am 10.11.2025}
 }
 @online{Yoshimoto-schottky,
   title     = {Wie Schottky-Dioden die Effizienz steigern},
   author    = {Koichiro Yoshimoto},
   date      = {31 Mai 2016},
   url       = {https://www.all-electronics.de/elektronik-entwicklung/wie-schottky-dioden-die-effizienz-steigern/773704},
-  note      = {Zugriff am 11.11.2025}
+urldate = {2025-11-11},
 }
 @online{Burrel-diode,
   title     = {Schottky-Dioden verstehen: Eine einfache Anleitung für Anfänger},
-  author    = {{Stephanie Burrel}},
+  author    = {Stephanie Burrel},
   date      = {15 November 2024},
   url       = {https://wraycastle.com/de/blogs/knowledge-base/shotkey-diode},
-  note      = {Zugriff am 11.11.2025}
+urldate = {2025-11-11},
 }
 @online{liquid-flicker,
   title     = {Understanding 1/f noise (flicker noise)},
-  author    = {Liquid Insturments},
+  organization    = {Liquid Insturments},
   year      = {2025},
   url       = {https://liquidinstruments.com/blog/understanding-1-f-noise-flicker-noise/},
-  date   = {5 September 2025},
-  note      = {Zugriff am 11.11.2025}
+  date   = {2025-11-5},
+  urldate      = {2025-11-11}
+}
+@online{Bild-BER,
+  title     = {Modelling the Bit Error Rate (BER)},
+  organization    = {CloudRF},
+  year      = {2019},
+  url       = {https://liquidinstruments.com/blog/understanding-1-f-noise-flicker-noise/},
+  date   = {2019-12-20},
+  urldate     = {2025-12-22}
+}
+@online{Analog-Devices-Flicker-Noise,
+  title     = {Understanding and Eliminating 1/f noise},
+  author    = {Robert Kiely},
+  year      = {2017},
+  url       = {https://www.analog.com/media/en/analog-dialogue/volume-51/number-2/articles/understanding-and-eliminating-1-f-noise.pdf},
+  urldate      = {2025-12-22}
+}
+@online{NoiseFigur,
+    title = {Understanding Noise Figure},
+    author = {Iulian Rosu},
+    url = {https://www.qsl.net/va3iul/Noise/Understanding%20Noise%20Figure.pdf},
+    urldate = {2025-11-18}
 }
 
+
+
+
+
+
+#Theoretische Betrachtung der Empfangskette
+@online{PräsiEsHail2,
+    title   = {Es'Hail-2 Satellite AMSAT Payload},
+    organization  = {ITU-R},
+    url     = {https://www.itu.int/en/itu-r/space/workshops/2015-prague-small-sat/presentations/eshail-2.pdf},
+    urldate = {2025-12-03}
+}
+@online{RadartutorialFreiraumdämpfung,
+    title   = {Freiraumdämpfung},
+    author  = {Christian Wolf},
+    url     = {https://www.radartutorial.eu/01.basics/Freiraumd%C3%A4mpfung.de.html},
+    urldate = {2025-12-04}
+}
+@book{Satellite_Communications_Systems,
+    author = {Gerard Maral, Michel Bousquet, Zhili Sun},
+    title = {Satellite_Communications_Systems} ,
+    publisher = {Wiley} ,
+    year = {2020},
+    ISBN = {978-1-119-38208-9}
+}
+@online{Bild_Atmosphäre,
+    author = {Niko Lang},
+    title = {Atmosphäre Aufbau},
+    url = {https://commons.wikimedia.org/w/index.php?curid=5074672},
+    urldate = {2025-12-12}
+}
+@online{Ionosphäre,
+    author = {Krisitian Schlegel},
+    publisher = {Max-Planl-Institut für Aeronomie},
+    title = {Ionosphärenforschung},
+    url = {https://commons.wikimedia.org/w/index.php?curid=5074672},
+    urldate = {2025-12-12}
+}
+@online{ITU-RP.837-8,
+    publisher = {ITU-R},
+    title = {Recommendation ITU-R P.837-8 Characteristics of precipitation for
+    propagation modelling},
+    url = {https://www.itu.int/rec/R-REC-P.837-8-202509-I/en},
+    urldate = {2025-12-13}
+}
+@online{isothermehöhe,
+    organization = {Wikipedia},
+    title = {Freezing level},
+    url = {https://en.wikipedia.org/wiki/Freezing_level},
+    urldate = {2025-12-13}
+}
+@online{höhebremen,
+    organization = {TessaDEM},
+    title = {Topografische Karte Bremen, Höhe, Relief.},
+    url = {https://de-de.topographic-map.com/map-p6gt6/Bremen/?center=53.03853%2C8.83627&zoom=13&popup=53.05533%2C8.7834},
+    urldate = {2025-12-13}
+}
+@online{ITU-RP.838-3,
+    organization = {ITU-R},
+    title = {Recommendation ITU-R P.838-3 Specific attenuation model for rain for use in prediction methods},
+    url = {https://www.itu.int/rec/R-REC-P.838-3-200503-I/en},
+    urldate = {2025-12-13}
+}
+@online{ITU-RP.676-13,
+    organization = {ITU-R},
+    title = {Recommendation ITU-R P.676-13 Attenuation by atmospheric gases and related effects},
+    url = {https://www.itu.int/rec/R-REC-P.676-13-202208-I/en},
+    urldate = {2025-12-13}
+}
+@online{Regentropfen,
+    author = {Dr. rer. nat Markus Übel},
+    publisher = {Deutscher Wetterdienst (DWD)},
+    title = {Vom Himmel fallende Burgerbrötchen, Pilzhüte und Fallschirme },
+    url = {https://www.dwd.de/DE/wetter/thema_des_tages/2022/1/16.html},
+    year = {2022},
+    urldate = {2025-12-14}
+}
+@online{ITU-RP.618-14,
+    organization = {ITU-R},
+    title = {Recommendation ITU-R P.618-14 Propagation data and prediction methods required for the design of Earth-space telecommunication systems},
+    url = {https://www.itu.int/rec/R-REC-P.618-14-202308-I/en},
+    urldate = {2025-12-14}
+}
+@online{Altium-Impedanz,
+    author = {Zachariah Peterson },
+    publisher = {Altium},
+    title = {Die geheimnisvolle 50-Ohm-Impedanz: Woher sie kommt und warum wir sie verwenden},
+    url = {https://resources.altium.com/de/p/mysterious-50-ohm-impedance-where-it-came-and-why-we-use-it},
+    date = {2021-03-04},    
+    urldate = {2025-12-20}
+}
+
+@online{Link-Budget,
+  title     = {Satellite Link Budget},
+  organization    = {MathWorks Inc.},
+  url       = {https://de.mathworks.com/help/satcom/gs/satellite-link-budget.html},
+  urldate   = {2026-01-04},
+}
+@online{Vergleich-GT,
+  title     = {DIPLOMARBEIT ENTWURF DES KOMMUNIKATIONSSYSTEMS FÜR DEN GOSSAMER-1 SATELLITEN},
+author = {Michael Jetzschmann},
+  organization    = {Technische Universität Berlin},
+  url       = {https://elib.dlr.de/106471/1/Diplomarbeit_Jetzschmann_GOS-1-Comms-04_2013.01.30.pdf},
+  date = {2013-01-31},
+    urldate   = {2026-01-07},
+}
+#GNU Radio
+@online{GNU-Radio,
+  title     = {What is GNU Radio?},
+  organization    = {GNU Radio},
+  url       = {https://wiki.gnuradio.org/index.php?title=What_Is_GNU_Radio},
+  urldate   = {2026-01-02},
+}
+@online{GNU-Radio-USRP-Source,
+  title     = {USRP Source},
+  organization    = {GNU Radio},
+  url       = {https://wiki.gnuradio.org/index.php?title=USRP_Source},
+  urldate   = {2026-01-10},
+}
+@online{GNU-Radio-Frequency-Sink,
+  title     = {QT GUI Frequency Sink},
+  organization    = {GNU Radio},
+  url       = {https://wiki.gnuradio.org/index.php/QT_GUI_Frequency_Sink},
+  urldate   = {2026-01-10},
+}
+@online{GNU-Radio-Waterfall-Sink,
+  title     = {QT GUI Waterfall Sink},
+  organization    = {GNU Radio},
+  url       = {https://wiki.gnuradio.org/index.php/QT_GUI_Waterfall_Sink},
+  urldate   = {2026-01-10},
+}
+@book{Nachrichtentechnik,
+    author = {Martin Werner},
+    title = {Nachrichtentechnik},
+    publisher = {Springer},
+    year = {2017},
+    note = {ISBN: 978-3-83-482580-3}
+}
+@online{GNU-Radio-SSB,
+  title     = {Frequency Xlating FIR Filter},
+  organization    = {GNU Radio},
+  url       = {https://wiki.gnuradio.org/index.php/Frequency_Xlating_FIR_Filter},
+  urldate   = {2026-01-10},
+}
+@online{GNU-Radio-SwapIQ,
+  title     = {Swap IQ},
+  organization    = {GNU Radio},
+  url       = {https://wiki.gnuradio.org/index.php/Swap_IQ},
+  urldate   = {2026-01-10},
+}
+@online{GNU-Radio-ComplexToReal,
+  title     = {Complex To Real},
+  organization    = {GNU Radio},
+  url       = {https://wiki.gnuradio.org/index.php?title=Complex_To_Real},
+  urldate   = {2026-01-10},
+}
+@online{GNU-Radio-FM,
+  title     = {FM Demod},
+  organization    = {GNU Radio},
+  url       = {https://wiki.gnuradio.org/index.php/FM_Demod},
+  urldate   = {2026-01-10},
+}
+@online{Phasendemodulator,
+    title= {SSB Demodulation},
+    author = {Dr. Stefan Scholl},
+    organization = {Panoradio SDR},
+    url = {https://panoradio-sdr.de/ssb-demodulation/},
+    urldate = {2026-1-13}}
+@online{GNU-Radio-AGC,
+  title     = {AGC2},
+  organization    = {GNU Radio},
+  url       = {https://wiki.gnuradio.org/index.php/AGC2},
+  urldate   = {2026-01-13},
+}
+@online{GNU-Radio-WAV,
+  title     = {Wav File Sink},
+  organization    = {GNU Radio},
+  url       = {https://wiki.gnuradio.org/index.php/Wav_File_Sink},
+  urldate   = {2026-01-14},
+}
+@online{GNU-Radio-Audiosink,
+  title     = {Audio Sink},
+  organization    = {GNU Radio},
+  url       = {https://wiki.gnuradio.org/index.php/Audio_Sink},
+  urldate   = {2026-01-14},
+}
+@online{GNU-Radio-Resampler,
+  title     = {Rational Resampler},
+  organization    = {GNU Radio},
+  url       = {https://wiki.gnuradio.org/index.php/Rational_Resampler},
+  urldate   = {2026-01-14},
+}
+
+
+
+@online{Sprachbereich,
+    title = {Hörbereich und Stimmumfang },
+    organization    = {Lernhelfer (Duden Learnattack GmbH)},
+    url       = {https://www.lernhelfer.de/schuelerlexikon/physik/artikel/hoerbereich-und-stimmumfang},
+    urldate   = {2026-01-16},
+}
+@online{CW,
+    title = {Modulation, Demodulation},
+    author    = {Thomas Rottmayer (DL4MDF)},
+    url       = {https://www.darc.de/fileadmin/filemounts/distrikte/b/BNetzA/Technik_E/Modulation.pdf},
+    urldate   = {2026-01-16},
+}
 
 
 
@@ -290,17 +724,15 @@
 #Für Ausrichten der Antenne
 @online{rfwireless-poiting,
   title     = {Antenna Azimuth and Elevation Calculator},
-  author    = {{RF Wireless World}},
+  organization    = {RF Wireless World},
   year      = {2025},
   url       = {https://www.rfwireless-world.com/calculators/antenna-azimuth-elevation-calculator},
   urldate   = {2025-11-03},
-  note      = {Zugriff am 03.11.2025}
 }
 @online{easycalculation-satellite-antenna,
   title     = {Learn How to Calculate Satellite Antenna Bearing},
-  author    = {{EasyCalculation.com}},
+  organization= {HIOX Softwares Pvt Ltd.},
   year      = {2025},
   url       = {https://www.easycalculation.com/physics/geophysics/learn-satellite-antenna-bearing.php},
   urldate   = {2025-11-03},
-  note      = {Zugriff am 03.11.2025}
 }
