--- a/doc/Theorie_Satelliten.tex
+++ b/doc/Theorie_Satelliten.tex
@@ -1,14 +1,14 @@
 \subsection{Was ist ein Satellit}
 Bei einem Satelliten handelt es sich im allgemeinen Verständnis um ein Objekt, welches sich in einer Umlaufbahn um einen Himmelskörper, wie z.B ein Planet, Mond, Stern oder ähnliches befindet. Dabei kann der Satellit natürlichem oder künstlichen Ursprung sein.\cite{Satellite_Technology}\newline
 Im weiteren Verlauf handelt es sich bei einem Satelliten um ein künstliches Objekt, welches sich in einer Umlaufbahn um die Erde befindet.\newline
-Die erste Idee für einen Satelliten in einer geostationären Umlaufbahn stammt aus dem Jahren 1945. In diesem Jahr veröffentlichte der Autor Arthur C. Clarke im Magazin "Wireless World" einen Artikel, in welchem er die Bedeutung des geostationären Orbits beschreibt. Die Zeit, die ein Satellit in einer geostationären Umlaufbahn benötigt, um einmal um die Umlaufbahn zu durchlaufen, entspricht der Zeit, die die Erde für ein Rotation um sich selbst benötigt. Für einen Beobachter auf der Erdoberfläche steht der Satellit immer über dem gleichen Punkt auf der Erde. Weiterhin beschreibt Clarke die Idee eines Kommunikationssatelliten im geostationären Orbit. Mit dem richtigen Equipment könnte ein solche Satellit eine Möglichkeit für interkontinentalen Datenaustausch bieten.\cite{Satellite_Technology}\newline
+Die erste Idee für einen Satelliten in einer geostationären Umlaufbahn stammt aus dem Jahren 1945. In diesem Jahr veröffentlichte der Autor Arthur C. Clarke im Magazin Wireless World einen Artikel, in welchem er die Bedeutung des geostationären Orbits beschreibt und die Idee eines Kommunikationssatelliten im geostationären Orbit vorstellt. Mit dem richtigen Equipment könnte solch ein Satellit interkontinentalen Datenaustausch ermöglichen.\cite{Satellite_Technology}\newline
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.5\linewidth]{Bilder/Sputnik 1.jpeg}
-    \caption{Das Bild zeigt den ersten Satelliten Sputnik 1 vor dem Start. Sputnik 1 ist eine Alumiumkugel mit einem Durchmesser $0.58 \text{ m}$ und einem Gewicht von $58 \text{ kg}$.\cite{Sputnik_1}\cite{Bild_Sputnik}}
+    \caption{Das Bild zeigt den ersten Satelliten Sputnik 1 vor dem Start. Sputnik 1 ist eine Aluminiumkugel mit einem Durchmesser $0.58 \text{ m}$ und einem Gewicht von $58 \text{ kg}$.\cite{Sputnik_1}\cite{Bild_Sputnik}}
     \label{Sputnik 1}
 \end{figure}
-Der erste Satellit starte am 04. Oktober 1957 von der damaligen UdSSR. Der Satellit mit Namen Sputnik 1, was so viel wie Begleiter oder Trabant bedeutet, umkreiste die Erde alle 98 min. Ausgerüstet war Sputnik 1 mit zwei Antennenpaaren und Telekommunikationsequipment, mit welchem er über $20.005$ MHz und $40.002$ MHz kurze Signale aussendete. Diese konnten auf der ganzen Welt empfangen werden. Nach etwa 92 Tage verglühte Sputnik 1 beim Wiedereintritt in die Atmosphäre. \cite{Sputnik_1}\newline
+Der erste Satellit starte am 04. Oktober 1957 von der damaligen UdSSR. Der Satellit mit Namen Sputnik 1, was so viel wie Begleiter oder Trabant bedeutet, umkreiste die Erde alle 98 min. Ausgerüstet war Sputnik 1 mit zwei Antennenpaaren und Telekommunikationsequipment, mit welchem er über $20.005$ MHz und $40.002$ MHz kurze Signale aussendete. Diese Signale konnten auf der ganzen Welt empfangen werden. Nach etwa 92 Tage verglühte Sputnik 1 beim Wiedereintritt in die Atmosphäre. \cite{Sputnik_1}\newline
 Der erste amerikanische Satellit starte am 31. Januar 1958 mit dem Namen Explorer 1. Explorer 1 ist der erste Satellit gewesen, welcher wissenschaftliches Equipment ab Bord hatte.\cite{NASA_Explorer1}
 \begin{figure}[H]
     \centering
@@ -20,31 +20,16 @@ An Bord von Explorer 1 befanden sich wissenschaftliches Equipment, unter anderem
 In der heutigen Zeit gibt es viele verschiedene Arten an Satelliten, welche sich in ihrem Verwendungszweck und ihrem damit verbunden Equipment und Umlaufbahn unterscheiden.\newline
 Ein paar Beispiele wären dabei:
 \begin{itemize}
-    \item Erdbeobachtungssatelliten: Erdbeobachtungssatelliten werden, wie der Name bereits aussagt, zur Beobachtung und Analyse der Erdoberfläche und Atmosphäre eingesetzt. Ein Beispiel für solche Satelliten wären Wettersatelliten, welche in den verschiedensten Umlaufbahnen zu finden sind. Diese werden meistens mit verschiedensten Kameras, welche Bilder von der Oberfläche der Erde und Wolkenformation aufnehmen. Die Bilder bieten eine mögliche Grundlage für die Wettervorhersage. Beispiele für Wettersatelliten sind unter andrem die NOAA und GOES Reihe der Amerikaner, die METOP und METOSAT Reihe der Europäer und die METEOR und Electro-L Reihe der Russen.\cite{DWD}
-    \item Kommunikations- und Rundfunksatelliten: Dieser Art der Satelliten stellen verschiedenste Service im Bereich der Telekommunikation und Rundfunk bereit. Sie werden unter anderem zur Übertragung von Fernsehsignalen, Telefonie und Internet verwendet. Auch diese Satelliten sind in den verschiedensten Umlaufbahnen zu finden. Ein paar Beispiele wären die Starlink Reihe von SpaceX, Iridium von gleichnamigen Unternehmen Iridum, Inmarsat vom gleichnamigen Unternehmen Inmarsat und Astra von SES S.A. ASTRA.\cite{Satellite_Technology}\cite{Satellitenkommunikation}\cite{N2YO_SATLIST}
-    \item Navigationssatelliten: Navigationssatelliten werden zur genauen Positionsbestimmung verwendet. Die Positionsbestimmung basiert dabei auf der der Triangulierung und Einwegentfernungsmessung. Zur Bestimmung werden Signale von drei oder mehreren Satelliten empfangen. Die Signale enthalten neben den genauen Koordinaten des Satelliten auch den genauen Zeitpunkt, an welchem die Signale versendet werden. Grundlage für den genauen Zeitbestimmung bilden Atomuhren.\cite{Satellitenkommunikation}\newline
-    Zusammen mit der Empfangszeit wird dann die Laufzeit der einzelnen Signale ermittelt, woraus die zurückgelegt Entfernung ermittelt werden kann. Der Standpunkt ist dann der Schnittpunkt der Kugeln, deren Mittelpunkte die Satelliten und deren Radius der zurückgelegte Weg ist.\cite{Satellitenkommunikation}\newline
-    Die Genauigkeit ist dabei proportional zur Anzahl zur Triangulation verwendeten Satelliten. Beispiele für solche Sternenkonstellationen sind das GPS der Amerikaner, das GLONASS der Russen und das europäische Galileo.\cite{Satellitenkommunikation}
-    \item Amateurfunksatelliten: Amateurfunksatelliten bilden eine besondere Untergruppe der Kommunikationssatelliten. Sie werden meistens von Universitäten, Vereinigungen von Amateurfunkern oder ähnlichen Vereinen geplant, entwickelt, gebaut und betrieben, wobei die enge Budgets und technologischen Innovationen bewundernswert sind.\cite{Satellitenkommunikation}
-    Eine solche Vereinigung ist AMSAT, welche mehrere Ableger weltweit hat. In Deutschland gibt es die AMSAT-DL, welche sich aus Funkamateuren, Ingenieuren, Wissenschaftlern, Stundenten und Raumfahrtenthusiasten zusammensetzt. Seit über 50 Jahren plant, entwickelt, baut und betreibt AMSAT-DL verschiedenste Satelliten, welche von Funktamateuren frei verwendet werden dürfen.\cite{AMSAT-DL}\newline
-    Der erste Amateurfunksatellit "OSCAR-I" (Orbital Satellite Carrying Amateur Radio) starte am 12. Dezember 1961, vier Jahre vor dem ersten kommerziellen Kommunikationssatelliten "Early Bird". Die ersten OSCAR-I,-II und -III Satelliten funktionierten nur wenige Tage. Erst OSCAR-VI von der deutschen AMSAT (AMSAT-DL) schaffte es 4,5 Jahren lang zu arbeiten. Es folgten  weitere deutsche OSCARS, weltweit insgesamt mehr als 50 Stück.\cite{Satellitenkommunikation}\newline
-    Weitere Meilensteine von AMSAT-DL sind die sogenannten Phase 3 Satelliten. Die Entwicklung dieser Satelliten began in den 70er Jahren. Das Ziel der Phase 3 Satelliten ist eine Generation von Erdsatelliten in einer hochelliptischen Umlaufbahn zu erschaffen. Gegenüber der bisherigen Satelliten würden diese eine weltweiten Benutzerkreis erschließen. Von den bisher vier gestarteten Phase 3 Satelliten, mit der Bezeichnung P3-A bis P3-D, sind nur noch P3-B und P3-D im Orbit. \cite{AMSAT-DL}\cite{Satellitenkommunikation}\newline
-    Ein weiterer Meilenstein ist der erste Phase 4 Satellit. Bei dem Satelliten handelt es sich um die katarischen Rundfunk- und Kommunikationssatelliten Es'Hail-2, welcher neben dem Equipment zur kommerziellen Nutzung auch zwei Amateurfunktransponder an Bord hat, welche die ersten im geostationären Orbit sind.\cite{AMSAT-DL}\newline
-    Aktuell beschäftigt sich AMSAT-DL mit der Entwicklung eines weiter Phase 3 Satelliten (P3-E), welcher als Testsatellit für die Technologien von P5A dienen soll. Bei P5-A handelt es sich um den ersten Phase 5 Satelliten welcher zukünftig zum Mars fliegen soll.\cite{AMSAT-DL}
+    \item Erdbeobachtungssatelliten: Diese werden zur Beobachtung und Analyse der Erdoberfläche und Atmosphäre eingesetzt. Zu dieser Gruppe an Satelliten gehören unter anderem Wettersatelliten. Ausgerüstet mit verschiedenen Kameras und Messequipment nehmen sie Bilder von Wolkenformationen und Daten der Atmosphäre auf. Diese Daten und Bilder bilden dann die Grundlage für die Wettervorhersage. Einige Beispiele für Wettersatelliten sind unter andrem die NOAA und GOES Reihe der Amerikaner, die METOP und METOSAT Reihe der Europäer und die METEOR und Electro-L Reihe der Russen.\cite{DWD}
+    \item Kommunikations- und Rundfunksatelliten: Dieser Art der Satelliten stellen verschiedenste Service im Bereich der Telekommunikation und Rundfunk bereit. Sie werden unter anderem zur Übertragung von Fernsehsignalen, Telefonie und Internet verwendet. Sie sind in den unterschiedlichsten Umlaufbahnen anzutreffen. Einige Beispiele wäre dabei die Starlink Reihe von SpaceX, Iridium von Iridium und Inmarsat von Inmarsat oder Astra von SES S.A. ASTRA.\cite{Satellite_Technology}\cite{Satellitenkommunikation}\cite{N2YO_SATLIST}
+    
+    \item Navigationssatelliten: Diese werden zur genauen Positionsbestimmung verwendet. Dafür bilden diese ganze Satellitenkonstellationen, welche die gesamte Erde umspannen können. Die Positionsbestimmung basiert dabei auf der der Triangulierung und Einwegentfernungsmessung. Zur Bestimmung werden Signale von drei oder mehreren Satelliten empfangen. Die Signale enthalten neben den genauen Koordinaten des Satelliten auch den genauen Zeitpunkt, an welchem die Signale versendet werden. Grundlage für den genauen Zeitbestimmung bilden Atomuhren, welche sich auf den Satelliten befinden. Beispiele für solche Sternenkonstellationen sind das GPS der Amerikaner, das russische GLONASS und das europäische Galileo.\cite{Satellitenkommunikation}
+    
+    \item Amateurfunksatelliten: Amateurfunksatelliten bilden eine besondere Untergruppe der Kommunikationssatelliten. Sie werden meistens von Universitäten, Vereinigungen von Amateurfunkern oder ähnlichen Vereinen geplant, entwickelt, gebaut und betrieben. Dabei sind die engen Budgets und technologischen Innovationen bewundernswert.\cite{Satellitenkommunikation}\newline
+    Eine solche Vereinigung ist AMSAT, welche mehrere Ableger weltweit hat. In Deutschland gibt es die AMSAT-DL, welche sich aus Funkamateuren, Ingenieuren, Wissenschaftlern, Studenten und Raumfahrtenthusiasten zusammensetzt. Seit über 50 Jahren plant, entwickelt, baut und betreibt die AMSAT-DL verschiedenste Satelliten, welche von Funkamateuren frei verwendet werden dürfen.\cite{AMSAT-DL}\newline
+    Der erste Amateurfunksatellit OSCAR-I (Orbital Satellite Carrying Amateur Radio) starte am 12. Dezember 1961, vier Jahre vor dem ersten kommerziellen Kommunikationssatelliten "Early Bird". Die ersten OSCAR-I,-II und -III Satelliten funktionierten nur wenige Tage. Erst OSCAR-VI von der deutschen AMSAT (AMSAT-DL) schaffte es 4,5 Jahren lang zu arbeiten. Es folgten  weitere deutsche OSCARS, weltweit insgesamt mehr als 50 Stück.\cite{Satellitenkommunikation}\newline
+    Weitere Meilensteine von AMSAT-DL sind die sogenannten Phase 3 Satelliten. Die Entwicklung dieser Satelliten begann in den 1970er Jahren. Das Ziel der Phase 3 Satelliten ist eine Generation von Erdsatelliten in einer hoch elliptischen Umlaufbahn zu erschaffen. Gegenüber der bisherigen Satelliten würden diese einen weltweiten Benutzerkreis erschließen. Von den bisher vier gestarteten Phase 3 Satelliten, mit der Bezeichnung P3-A bis P3-D, sind nur noch P3-B und P3-D im Orbit. \cite{AMSAT-DL}\cite{Satellitenkommunikation}\newline
+    Ein weiterer Meilenstein ist der erste Phase 4 Satellit. Bei dem Satelliten handelt es sich um den katarischen Rundfunk- und Kommunikationssatelliten Es'Hail-2. Dieser trägt den Rufname QO-100 und hat neben dem Equipment zur kommerziellen Nutzung auch zwei Amateurfunktransponder an Bord hat, welche die ersten im geostationären Orbit sind.\cite{AMSAT-DL}\newline
 \end{itemize}
-Ein Satellit wird meistens für einen Verwendungszweck geplant, entwickelt und gebaut. Je nach Verwendungszweck und geplanter Lebensdauer wird ein geeigneter Orbit ausgewählt.
-\subsection{Umlaufbahnen für Satelliten}
 
-Satelliten werden entsprechend ihrer Mission in eine geeignete Umlaufbahn platziert. Verschiedene Missionen können verschiedene Umlaufbahnen erfordern. Die Umlaufbahnen unterscheiden sich dabei in Form (Kreis oder Ellipse), Höhe und Inklination zum Äquator. \cite{Satellitenkommunikation}\newline
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=0.5\linewidth]{Bilder/Umlaufbahnen.png}
-    \caption{Die verschiedenen Umlaufbahnen im Überblick \cite{Satellitenkommunikation}}
-    \label{Umlaufbahnen}
-\end{figure}
 
-In der Abbildung \ref{Umlaufbahnen} zeigt verschiedene Umlaufbahnen, welche für unterschiedliche Satelliten verwendet werden. Satelliten für Erdbeobachtung oder Wetteranalyse werden meistens in Umlaufbahnen möglichst nah an der Erdoberfläche platziert. So kann die Auflösung der aufgenommen Bilder erhöht werden.\cite{Satellitenkommunikation}\newline
-Auf der anderen Seite werden Kommunikations- und Rundfunksatelliten in höhere Umlaufbahnen gebracht. Mit einer höheren Umlaufbahn kann die Sichtdauer auf den jeweiligen Satelliten und auch der Abdeckungsbereich des jeweilige Satelliten kann erhöht werden. In Folge dessen kann auch die Anzahl an notwendigen Satelliten, um zum Beispiel eine weltweite Abdeckung zu erreichen, auf ein Minimum reduziert werden.\cite{Satellitenkommunikation}\newline
-\subsubsection*{Die allgemeine Kreisbahn}
-Damit ein Satellit in seiner jeweiligen vorgesehen Umlaufbahn bleibt, müssen die auf den Satelliten wirkenden Kräfte im Gleichgewicht bleiben.
-\subsection{Postion eines Satelliten}
